// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSignatureDetail should not render if not open 1`] = `<DocumentFragment />`;

exports[`MultiSignatureDetail should render 1st step 1`] = `
<DocumentFragment>
  <section
    data-testid="MultiSignatureDetail__first-step"
  >
    <div
      class="flex items-center py-6 true "
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral"
        >
          Sender
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="mt-2 font-semibold"
          >
            ADDRESS
          </div>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full"
        >
          <img
            alt="test"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
            title="test"
          />
        </div>
      </div>
    </div>
    <div
      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral"
        >
          Recipient
        </div>
        <div
          class="font-semibold"
        >
          Bank
          <span
            class="ml-2 text-theme-neutral"
          >
            ADDR...ESSS
          </span>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full"
        >
          <img
            alt="test"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
            title="test"
          />
        </div>
      </div>
    </div>
    <div
      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral"
        >
          Amount
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="sc-fznyAO fDRtLd"
            color="danger"
          >
            2,088.84557 ARK
          </div>
          <span
            class="ml-2 text-theme-neutral"
          >
            23,000.00 USD
          </span>
        </div>
      </div>
      <div
        class="sc-AxhCb fwVCao border-theme-danger-contrast text-theme-danger-400"
      >
        <div
          class="sc-AxjAm vZRQY"
          height="16"
          width="16"
        >
          <svg>
            sent.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral"
        >
          Transaction Fee
        </div>
        <div
          class="font-semibold"
        >
          0.09812015 ARK
        </div>
      </div>
    </div>
    <div
      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral"
        >
          Smartbridge
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="flex justify-between"
          >
            Hello!
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            >
              <svg>
                smartbridge.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral"
        >
          Timestamp
        </div>
        <div
          class="font-semibold"
        >
          14.04.2020 21:42:40
        </div>
      </div>
    </div>
    <div
      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 pb-0"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral"
        >
          Confirmations
        </div>
        <div
          class="font-semibold"
        >
          Waiting for Signatures
        </div>
      </div>
    </div>
    <div
      class="px-12 pt-8 mt-2 mt-8 -mx-12 text-black border-t border-gray-500"
    >
      <div>
        <h3
          class="mb-0"
        >
          Signatures
        </h3>
        <div
          class="flex"
        >
          <div>
            <div
              class="mb-2 text-sm font-semibold text-theme-neutral"
            >
              You
            </div>
            <div
              class="pr-4 mr-2 border-r border-theme-neutral-300"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
                <span
                  class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      checkmark.svg
                    </svg>
                  </div>
                  <span />
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              class="mb-2 ml-2 text-sm font-semibold text-theme-neutral"
            >
              Other
            </div>
            <div
              class="flex ml-2 space-x-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
                <span
                  class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      status-clock.svg
                    </svg>
                  </div>
                  <span />
                </span>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
                <span
                  class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      status-clock.svg
                    </svg>
                  </div>
                  <span />
                </span>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
                <span
                  class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      checkmark.svg
                    </svg>
                  </div>
                  <span />
                </span>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
                <span
                  class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      status-clock.svg
                    </svg>
                  </div>
                  <span />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`MultiSignatureDetail should render 2nd step 1`] = `
<DocumentFragment>
  <section
    data-testid="MultiSignatureDetail__second-step"
  >
    <fieldset
      class="sc-AxhUy dJlYTe flex flex-col space-y-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="passphrase"
        label="Your Passphrase"
      >
        Your Passphrase
      </label>
      <div
        class="sc-fzozJi OgXfh max-w-20"
      >
        <input
          class="sc-AxgMl idsnv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-12"
          data-testid="import-wallet__passphrase-input"
          name="passphrase"
          type="password"
        />
        <div
          class="sc-AxheI sc-AxmLO jcthaj my-px mr-4"
        >
          <button
            class="flex items-center justify-center w-full h-full text-2xl focus:outline-none bg-theme-background text-theme-primary-400"
            data-testid="InputPassword__toggle"
            type="button"
          >
            <div
              class="sc-AxjAm cpczEI"
              height="1em"
              width="1em"
            >
              <svg>
                eye.svg
              </svg>
            </div>
          </button>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`MultiSignatureDetail should render 3rd step 1`] = `
<DocumentFragment>
  <section
    class="my-4 text-black"
    data-testid="MultiSignatureDetail__third-step"
  >
    <div>
      <h3
        class="mb-0"
      >
        Signatures
      </h3>
      <div
        class="flex"
      >
        <div>
          <div
            class="mb-2 text-sm font-semibold text-theme-neutral"
          >
            You
          </div>
          <div
            class="pr-4 mr-2 border-r border-theme-neutral-300"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="test"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="test"
                />
              </div>
              <span
                class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    checkmark.svg
                  </svg>
                </div>
                <span />
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="mb-2 ml-2 text-sm font-semibold text-theme-neutral"
          >
            Other
          </div>
          <div
            class="flex ml-2 space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="test"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="test"
                />
              </div>
              <span
                class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    status-clock.svg
                  </svg>
                </div>
                <span />
              </span>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="test"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="test"
                />
              </div>
              <span
                class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    status-clock.svg
                  </svg>
                </div>
                <span />
              </span>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="test"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="test"
                />
              </div>
              <span
                class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    checkmark.svg
                  </svg>
                </div>
                <span />
              </span>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="test"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="test"
                />
              </div>
              <span
                class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    status-clock.svg
                  </svg>
                </div>
                <span />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`MultiSignatureDetail should render a modal and get to step 3 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-fznKkj gWUAje fixed top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-50 mt-5 mr-5"
    >
      <button
        class="sc-AxiKw ha-DbdM"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="p-1"
        >
          <div
            class="sc-AxjAm HWmvM"
            height="12"
            width="12"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2
        class="mb-0 text-3xl font-bold"
      >
        Multisignature
      </h2>
      <div
        class="flex-1"
      >
        <form
          class="space-y-8"
          data-testid="Form"
        >
          <div>
            <div
              data-testid="tab-pabel__active-panel"
            >
              <section
                data-testid="MultiSignatureDetail__first-step"
              >
                <div
                  class="flex items-center py-6 true "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Sender
                    </div>
                    <div
                      class="font-semibold"
                    >
                      <div
                        class="mt-2 font-semibold"
                      >
                        ADDRESS
                      </div>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="test"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="test"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Recipient
                    </div>
                    <div
                      class="font-semibold"
                    >
                      Bank
                      <span
                        class="ml-2 text-theme-neutral"
                      >
                        ADDR...ESSS
                      </span>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="test"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="test"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Amount
                    </div>
                    <div
                      class="font-semibold"
                    >
                      <div
                        class="sc-fznyAO fDRtLd"
                        color="danger"
                      >
                        2,088.84557 ARK
                      </div>
                      <span
                        class="ml-2 text-theme-neutral"
                      >
                        23,000.00 USD
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-AxhCb fwVCao border-theme-danger-contrast text-theme-danger-400"
                  >
                    <div
                      class="sc-AxjAm vZRQY"
                      height="16"
                      width="16"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Transaction Fee
                    </div>
                    <div
                      class="font-semibold"
                    >
                      0.09812015 ARK
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Smartbridge
                    </div>
                    <div
                      class="font-semibold"
                    >
                      <div
                        class="flex justify-between"
                      >
                        Hello!
                        <div
                          class="sc-AxjAm buCJuk"
                          height="20"
                          width="20"
                        >
                          <svg>
                            smartbridge.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Timestamp
                    </div>
                    <div
                      class="font-semibold"
                    >
                      14.04.2020 21:42:40
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 pb-0"
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Confirmations
                    </div>
                    <div
                      class="font-semibold"
                    >
                      Waiting for Signatures
                    </div>
                  </div>
                </div>
                <div
                  class="px-12 pt-8 mt-2 mt-8 -mx-12 text-black border-t border-gray-500"
                >
                  <div>
                    <h3
                      class="mb-0"
                    >
                      Signatures
                    </h3>
                    <div
                      class="flex"
                    >
                      <div>
                        <div
                          class="mb-2 text-sm font-semibold text-theme-neutral"
                        >
                          You
                        </div>
                        <div
                          class="pr-4 mr-2 border-r border-theme-neutral-300"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                            <span
                              class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500"
                            >
                              <div
                                class="sc-AxjAm HWmvM"
                                height="12"
                                width="12"
                              >
                                <svg>
                                  checkmark.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          class="mb-2 ml-2 text-sm font-semibold text-theme-neutral"
                        >
                          Other
                        </div>
                        <div
                          class="flex ml-2 space-x-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                            <span
                              class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                            >
                              <div
                                class="sc-AxjAm HWmvM"
                                height="12"
                                width="12"
                              >
                                <svg>
                                  status-clock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                            <span
                              class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                            >
                              <div
                                class="sc-AxjAm HWmvM"
                                height="12"
                                width="12"
                              >
                                <svg>
                                  status-clock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                            <span
                              class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500"
                            >
                              <div
                                class="sc-AxjAm HWmvM"
                                height="12"
                                width="12"
                              >
                                <svg>
                                  checkmark.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                            <span
                              class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                            >
                              <div
                                class="sc-AxjAm HWmvM"
                                height="12"
                                width="12"
                              >
                                <svg>
                                  status-clock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
            <div
              class="flex justify-end mt-6"
            >
              <div
                class="flex-1"
              >
                <button
                  class="sc-AxiKw gFzSt mr-2"
                  color="primary"
                  type="button"
                >
                  Cancel
                </button>
              </div>
              <div
                class="space-x-3"
              >
                <button
                  class="sc-AxiKw gFzSt"
                  color="primary"
                  data-testid="MultiSignatureDetail__back-button"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <button
                  class="sc-AxiKw wFYj inline-block"
                  color="primary"
                  data-testid="MultiSignatureDetail__sign-button"
                  type="button"
                >
                  Sign
                </button>
                <button
                  class="sc-AxiKw wFYj hidden"
                  color="primary"
                  data-testid="MultiSignatureDetail__submit-button"
                  type="submit"
                >
                  Continue
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSignatureDetail should render a modal and go back 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-fznKkj gWUAje fixed top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-50 mt-5 mr-5"
    >
      <button
        class="sc-AxiKw ha-DbdM"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="p-1"
        >
          <div
            class="sc-AxjAm HWmvM"
            height="12"
            width="12"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2
        class="mb-0 text-3xl font-bold"
      >
        Multisignature
      </h2>
      <div
        class="flex-1"
      >
        <form
          class="space-y-8"
          data-testid="Form"
        >
          <div>
            <div
              data-testid="tab-pabel__active-panel"
            >
              <section
                data-testid="MultiSignatureDetail__first-step"
              >
                <div
                  class="flex items-center py-6 true "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Sender
                    </div>
                    <div
                      class="font-semibold"
                    >
                      <div
                        class="mt-2 font-semibold"
                      >
                        ADDRESS
                      </div>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="test"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="test"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Recipient
                    </div>
                    <div
                      class="font-semibold"
                    >
                      Bank
                      <span
                        class="ml-2 text-theme-neutral"
                      >
                        ADDR...ESSS
                      </span>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="test"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="test"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Amount
                    </div>
                    <div
                      class="font-semibold"
                    >
                      <div
                        class="sc-fznyAO fDRtLd"
                        color="danger"
                      >
                        2,088.84557 ARK
                      </div>
                      <span
                        class="ml-2 text-theme-neutral"
                      >
                        23,000.00 USD
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-AxhCb fwVCao border-theme-danger-contrast text-theme-danger-400"
                  >
                    <div
                      class="sc-AxjAm vZRQY"
                      height="16"
                      width="16"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Transaction Fee
                    </div>
                    <div
                      class="font-semibold"
                    >
                      0.09812015 ARK
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Smartbridge
                    </div>
                    <div
                      class="font-semibold"
                    >
                      <div
                        class="flex justify-between"
                      >
                        Hello!
                        <div
                          class="sc-AxjAm buCJuk"
                          height="20"
                          width="20"
                        >
                          <svg>
                            smartbridge.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Timestamp
                    </div>
                    <div
                      class="font-semibold"
                    >
                      14.04.2020 21:42:40
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 pb-0"
                >
                  <div
                    class="flex-1 space-y-2"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Confirmations
                    </div>
                    <div
                      class="font-semibold"
                    >
                      Waiting for Signatures
                    </div>
                  </div>
                </div>
                <div
                  class="px-12 pt-8 mt-2 mt-8 -mx-12 text-black border-t border-gray-500"
                >
                  <div>
                    <h3
                      class="mb-0"
                    >
                      Signatures
                    </h3>
                    <div
                      class="flex"
                    >
                      <div>
                        <div
                          class="mb-2 text-sm font-semibold text-theme-neutral"
                        >
                          You
                        </div>
                        <div
                          class="pr-4 mr-2 border-r border-theme-neutral-300"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                            <span
                              class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500"
                            >
                              <div
                                class="sc-AxjAm HWmvM"
                                height="12"
                                width="12"
                              >
                                <svg>
                                  checkmark.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          class="mb-2 ml-2 text-sm font-semibold text-theme-neutral"
                        >
                          Other
                        </div>
                        <div
                          class="flex ml-2 space-x-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                            <span
                              class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                            >
                              <div
                                class="sc-AxjAm HWmvM"
                                height="12"
                                width="12"
                              >
                                <svg>
                                  status-clock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                            <span
                              class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                            >
                              <div
                                class="sc-AxjAm HWmvM"
                                height="12"
                                width="12"
                              >
                                <svg>
                                  status-clock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                            <span
                              class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500"
                            >
                              <div
                                class="sc-AxjAm HWmvM"
                                height="12"
                                width="12"
                              >
                                <svg>
                                  checkmark.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                            <span
                              class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                            >
                              <div
                                class="sc-AxjAm HWmvM"
                                height="12"
                                width="12"
                              >
                                <svg>
                                  status-clock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
            <div
              class="flex justify-end mt-6"
            >
              <div
                class="flex-1"
              >
                <button
                  class="sc-AxiKw gFzSt mr-2"
                  color="primary"
                  type="button"
                >
                  Cancel
                </button>
              </div>
              <div
                class="space-x-3"
              >
                <button
                  class="sc-AxiKw gFzSt"
                  color="primary"
                  data-testid="MultiSignatureDetail__back-button"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <button
                  class="sc-AxiKw wFYj inline-block"
                  color="primary"
                  data-testid="MultiSignatureDetail__sign-button"
                  type="button"
                >
                  Sign
                </button>
                <button
                  class="sc-AxiKw wFYj hidden"
                  color="primary"
                  data-testid="MultiSignatureDetail__submit-button"
                  type="submit"
                >
                  Continue
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
